--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blockchain",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://ris0.github.io/Blockchain-Coding-Assessment",
   "dependencies": {
     "blockchain.info": "^2.11.0",
     "bootstrap": "^4.0.0",
@@ -12,9 +13,14 @@
     "shortid": "^2.2.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
